typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            131,
        ),
        hi: BytePos(
            133,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:13:5
   |
13 | var a1: { new <T>(x: T): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            161,
        ),
        hi: BytePos(
            163,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:14:5
   |
14 | var b1: { new (): string };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            190,
        ),
        hi: BytePos(
            192,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:16:5
   |
16 | var a2: { new <T>(x: T): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            220,
        ),
        hi: BytePos(
            222,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:17:5
   |
17 | var b2: { new (x: string): number };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            258,
        ),
        hi: BytePos(
            260,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:19:5
   |
19 | var a3: { new <T>(x?: T): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            289,
        ),
        hi: BytePos(
            291,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:20:5
   |
20 | var b3: { new (x?: string): number };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            328,
        ),
        hi: BytePos(
            330,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:22:5
   |
22 | var a4: { new <T>(...x: T[]): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            363,
        ),
        hi: BytePos(
            365,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:23:5
   |
23 | var b4: { new (...x: string[]): number };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            406,
        ),
        hi: BytePos(
            408,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:25:5
   |
25 | var a5: { new <T>(x: T, y: T): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            442,
        ),
        hi: BytePos(
            444,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:26:5
   |
26 | var b5: { new (x: string, y: number): string };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            491,
        ),
        hi: BytePos(
            493,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:28:5
   |
28 | var a6: { new <T, U extends T>(x: T, y: U): T };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            540,
        ),
        hi: BytePos(
            542,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedConstructorSignature.ts:29:5
   |
29 | var b6: { new (x: Base, y: C): Base };
   |     ^^

